# hardposit-chisel3

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.sbt
.circleci/: config.yml
FPGA/: build.sbt  build.sh  deploy.sh
HPS/: Makefile  hps_0.h  main.c
csrc/: test-CompareP16_eq.h  test-CompareP16_gt.h  test-CompareP16_lt.h  test-CompareP32_eq.h  test-CompareP32_gt.h  test-CompareP32_lt.h  test-CompareP64_eq.h  test-CompareP64_gt.h  test-CompareP64_lt.h  test-DivSqrtP16_div.h  test-DivSqrtP16_sqrt.h  test-DivSqrtP32_div.h  test-DivSqrtP32_sqrt.h  test-DivSqrtP64_div.h  test-DivSqrtP64_sqrt.h  test-DivSqrtPN_div.h  test-DivSqrtPN_sqrt.h  test-FMAP16.h  test-FMAP16_add.h  test-FMAP16_mul.h  test-FMAP32.h  test-FMAP32_add.h  test-FMAP32_mul.h  test-FMAP64.h  test-FMAP64_add.h  test-FMAP64_mul.h  test-FMAPN.h  test-FMAPN_add.h  test-P16toP32.h  test-P16toP64.h  test-P16toUI32.h  test-P16toUI64.h  test-P32toI32.h  test-P32toP16.h  test-P32toP64.h  test-P32toUI64.h  test-P64toI32.h  test-P64toP16.h  test-P64toP32.h  test-UI64toP64.h  (+6 more)
fpga/: build.sh  deploy.sh
hps/: Makefile  main.c
lib/: Makefile  P16.futil  P32.futil  P64.futil  README.md  posit_16.futil  posit_32.futil  posit_64.futil
lib/examples/: vector_add.fuse.data  (+1 more)
softposit/: build.sh  main.c
test_generator/: CMakeLists.txt  F2PConvertor.cpp  GenBinaryTest.hpp  GenCompareTest.hpp  GenConversionTest.hpp  GenTernaryTest.hpp  GenUnaryTest.hpp  P2FConvertor.cpp  PositConvertor.cpp  PositTestGenerator.cpp  PositTestGenerator.hpp  WriteCases.hpp  testposit_gen.cpp  testposit_gen.hpp
(+751 files in other folders)
